@@ -57,7 +57,7 @@ public:
 		BLEND_SUBTRACTIVE,
 		BLEND_MULTIPLICATIVE,
 		BLEND_PREMULTIPLIED,
-		BLEND_NONE,
+		BLEND_REPLACE,
 		BLEND_MAX_ENUM
 	};
 
